registration and login

--- a/Views/Product/Create.cshtml
+++ b/Views/Product/Create.cshtml
@@ -1,6 +1,10 @@
 ﻿@model Inventory.Models.ErrorViewModel
 
 @{
+    Layout = "~/Views/Shared/_layout.cshtml";
+}
+
+@{
     ViewData["Title"] = "Index";
 }
 
