--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
+    using Microsoft.VisualBasic;
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
@@ -37,8 +38,17 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Contact</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Brand" asp-action="BrandList">Brand</a>
+                        </li>
 
                     </ul>
+                </div>
+                <div>
+                    <button class="btn btn-success d-flex justify-content-center align-items-center">
+                        <i class="bi bi-people-fill"></i>
+                        <a class="nav-link text-light" asp-area="" asp-controller="User" asp-action="Login">Login</a>
+                    </button>
                 </div>
             </div>
         </nav>
@@ -49,10 +59,10 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted bg-success">
+    <footer class="border-top footer text-muted bg-success bottom-0 position-absolute">
         <div class="container">
             <div class="row text-center text-light">
-                <p>&copy; 2024 - Inventory - <a class="text-light" asp-area="" asp-controller="Home" asp-action="index">Home</a></p>
+                <p>Copyright &copy; @DateTime.Now.ToString("yyyy") - Inventory - <a class="text-light" asp-area="" asp-controller="Home" asp-action="index">Home</a></p>
             </div>
         </div>
     </footer>
