--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -23,11 +23,11 @@ body {
 
 
 
-.card {
+.product .card {
     transition: transform 0.3s ease;
 }
 
-.card:hover {
+.product .card:hover {
     transform: scale(1.1);
     cursor: pointer;
 }
