--- a/Views/Category/Index.cshtml
+++ b/Views/Category/Index.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Category list";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h2>@ViewData["Title"]</h2>
 
 <div class="row">
     <div class="col-12">
-        <a class="btn btn-success" asp-controller="Category" asp-action="Index">Add category</a>
+        <a class="btn btn-success" asp-controller="Category" asp-action="Create">Add category</a>
     </div>
 </div>
 
@@ -32,12 +32,18 @@
                         <td>@category.Id</td>
                         <td>@category.CategoryName</td>
                         <td>@category.CategoryDesc</td>
-                        <td>@category.CategoryImage</td>
-                        <td>@category.CreatedAt</td>
-                        <td>@category.UpdatedAt</td>
-                        <td>
-                            <i class="bi bi-pencil"></i>
-                            <i class="bi bi-trash"></i>
+                        <td><img src="@category.CategoryImage" alt="@category.CategoryName" width="80"/></td>
+                        <td>@category.CreatedAt.ToString("dd/MM/yyyy")</td>
+                        <td>@category.UpdatedAt.ToString("dd/MM/yyyy")</td>
+                        <td >
+                            <div class="d-flex flex-row gap-1">
+                                <a class="nav-link" asp-controller="Category" asp-action="Edit" asp-route-id="@category.Id">
+                                <i class="bi bi-pencil fs-5"></i>
+                            </a>
+                            <a class="text-danger nav-link" asp-controller="Category" asp-action="Delete" asp-route-id="@category.Id">
+                                <i class="bi bi-trash fs-5"></i>
+                            </a>
+                            </div>
                         </td>
                     </tr>
                 }
