--- a/Views/Category/Create.cshtml
+++ b/Views/Category/Create.cshtml
@@ -17,7 +17,7 @@
                     </div>
                     <div class="form-group">
                         <label for="CategoryDesc">Description</label>
-                        <input value="Description" type="text" name="CategoryDesc" id="CategoryDesc" class="form-control" />
+                        <input type="text" name="CategoryDesc" id="CategoryDesc" class="form-control" />
                         <span asp-validation-for="CategoryDesc" class="text-danger"></span>
                     </div>
                     <div class="form-group">
