--- a/Views/Category/Edit.cshtml
+++ b/Views/Category/Edit.cshtml
@@ -16,10 +16,12 @@
                     <div class="form-group">
                         <label for="CategoryName">Category Name</label>
                         <input value="@Model.CategoryName" type="text" name="CategoryName" id="CategoryName" class="form-control" />
+                        <span asp-validation-for="CategoryName" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label for="CategoryDesc">Description</label>
                         <input value="@Model.CategoryDesc" type="text" name="CategoryDesc" id="CategoryDesc" class="form-control" />
+                        <span asp-validation-for="CategoryDesc" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label for="CategoryImage">Image</label>
