--- a/Views/Category/Index.cshtml
+++ b/Views/Category/Index.cshtml
@@ -14,6 +14,9 @@
 
 <div class="row">
     <div class="col-12">
+        @if(Model == null || !Model.Any()){
+                <h2>No Content found.</h2>
+            }else{     
         <table class="table table-striped">
             <thead>
                 <tr>
@@ -49,5 +52,6 @@
                 }
             </tbody>
         </table>
+        }
     </div>
 </div>
