--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,16 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Inventory</title>
+
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/toastify.min.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-<<<<<<< HEAD
-    @* <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"> *@
-=======
     <link rel="stylesheet" href="~/css/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
->>>>>>> b5a7fd3042ac4a937e0e467b368814c867f29d7d
-    <link rel="stylesheet" href="~/Inventory.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    @* <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"> *@
+    @* <link rel="stylesheet" href="~/Inventory.styles.css" asp-append-version="true" /> *@
 </head>
 <body>
     <header>
@@ -44,6 +41,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Brand" asp-action="BrandList">Brand</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Category" asp-action="Index">Category</a>
+                        </li>
 
                     </ul>
                 </div>
@@ -62,13 +62,14 @@
         </main>
     </div>
 
-    <div class="footer-top">
-        @Html.Partial("FooterTop")
-    </div>
+    
 
     @* @RenderSection("Footer"); *@
     @* @{await Html.PartialAsync("Footer");} *@
-    <footer class="footer bg-success bottom-0 position-absolute">
+    <footer class="container-fluid footer bg-success bottom-0 position-absolute">
+        <div class="footer-top">
+        @Html.Partial("FooterTop")
+    </div>
         @Html.Partial("Footer")  
     </footer>
 
@@ -76,10 +77,11 @@
     
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
     <script src="~/js/toastify-js.js" asp-append-version="true"></script>
     <script src="~/js/axios.min.js" asp-append-version="true"></script>
     <script src="~/js/config.js" asp-append-version="true"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
