--- a/Views/Shared/FooterTop.cshtml
+++ b/Views/Shared/FooterTop.cshtml
@@ -1,16 +1,31 @@
-<div class="container-fluid bg-success">
+<div class="container-fluid">
     <div class="container">
         <div class="row">
         <div class="col-4">
             <h4 class="text-light">Categories</h4>
             <ul class="list-unstyled">
-                <li class="nav-item"><a class="nav-link" asp-controller="Category" asp-action="Index">Categories</a></li>
-                <li class="nav-item"><a class="nav-link" asp-controller="Category" asp-action="Index">Categories</a></li>
-                <li class="nav-item"><a class="nav-link" asp-controller="Category" asp-action="Index">Categories</a></li>
+                <li class="nav-item"><a class="nav-link text-light" asp-controller="Category" asp-action="Index">Categories</a></li>
+                <li class="nav-item"><a class="nav-link text-light" asp-controller="Category" asp-action="Index">Categories</a></li>
+                <li class="nav-item"><a class="nav-link text-light" asp-controller="Category" asp-action="Index">Categories</a></li>
             </ul>
         </div>
-        <div class="col-4"></div>
-        <div class="col-4"></div>
+        <div class="col-4">
+            <h4 class="text-light">Categories</h4>
+            <ul class="list-unstyled">
+                <li class="nav-item"><a class="nav-link text-light" asp-controller="Category" asp-action="Index">Categories</a></li>
+                <li class="nav-item"><a class="nav-link text-light" asp-controller="Category" asp-action="Index">Categories</a></li>
+                <li class="nav-item"><a class="nav-link text-light" asp-controller="Category" asp-action="Index">Categories</a></li>
+            </ul>
+        </div>
+        <div class="col-4">
+            <h4 class="text-light">Categories</h4>
+            <ul class="list-unstyled">
+                <li class="nav-item"><a class="nav-link text-light" asp-controller="Category" asp-action="Index">Categories</a></li>
+                <li class="nav-item"><a class="nav-link text-light" asp-controller="Category" asp-action="Index">Categories</a></li>
+                <li class="nav-item"><a class="nav-link text-light" asp-controller="Category" asp-action="Index">Categories</a></li>
+            </ul>
+        </div>
+        
     </div>
     </div>
 </div>
