--- a/Views/Category/Create.cshtml
+++ b/Views/Category/Create.cshtml
@@ -2,6 +2,9 @@
 @{
     ViewData["Title"] = "Create Category";
 }
+<div class="container-fluid">
+    <div class="container">
+
 
 <h2 class="text-center">@ViewData["Title"]</h2>
 
@@ -37,7 +40,8 @@
         </div>
     </div>
 </div>
-
+    </div>
+</div>
 <script>
     
 </script>
