--- a/Views/Shared/Footer.cshtml
+++ b/Views/Shared/Footer.cshtml
@@ -1,5 +1,8 @@
-<div class="container">
-    <div class="row text-center text-light">
-        <p>Copyright &copy; @DateTime.Now.ToString("yyyy") - Inventory - <a class="text-light" asp-area="" asp-controller="Home" asp-action="index">Home</a></p>
+<div class="container-fluid">
+    <div class="container">
+        <div class="row text-center text-light">
+            <p>Copyright &copy; @DateTime.Now.ToString("yyyy") - Inventory - <a class="text-light" asp-area=""
+                    asp-controller="Home" asp-action="index">Home</a></p>
+        </div>
     </div>
 </div>
