--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,13 +13,15 @@
     @* <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"> *@
     @* <link rel="stylesheet" href="~/Inventory.styles.css" asp-append-version="true" /> *@
 </head>
+
 <body>
     <header>
-        <nav class="navbar container-fluid navbar-expand-sm navbar-toggleable-sm navbar-light bg-success border-bottom box-shadow mb-3">
+        <nav
+            class="navbar container-fluid navbar-expand-sm navbar-toggleable-sm navbar-light bg-success border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand text-light" asp-area="" asp-controller="Home" asp-action="Index">Inventory</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
@@ -30,19 +33,24 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Blog" asp-action="Index">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Product" asp-action="Index">Product</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Product"
+                                asp-action="Index">Product</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">About</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home"
+                                asp-action="Privacy">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Contact</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home"
+                                asp-action="Privacy">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Brand" asp-action="BrandList">Brand</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Brand"
+                                asp-action="BrandList">Brand</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Category" asp-action="Index">Category</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Category"
+                                asp-action="Index">Category</a>
                         </li>
 
                     </ul>
@@ -56,25 +64,31 @@
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+    <div class="container-fluid">
+        <div class="container">
+            <main role="main" class="pb-3">
+                @RenderBody()
+            </main>
+        </div>
     </div>
 
-    
+
 
     @* @RenderSection("Footer"); *@
     @* @{await Html.PartialAsync("Footer");} *@
-    <footer class="container-fluid footer bg-success bottom-0 position-absolute">
+    @* <footer class="container-fluid bg-success">
         <div class="footer-top">
-        @Html.Partial("FooterTop")
-    </div>
+            @Html.Partial("FooterTop")
+        </div>
+        <div class="container-fluid bottom-0">
+            @Html.Partial("Footer")
+        </div>
+    </footer> *@
+
+    <footer class="container-fluid bg-success bottom-0 position-absolute py-2">
         @Html.Partial("Footer")  
     </footer>
 
-
-    
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
@@ -84,4 +98,5 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+
 </html>
