--- a/Views/Category/Create.cshtml
+++ b/Views/Category/Create.cshtml
@@ -1,6 +1,8 @@
 @model Inventory.Models.CategoryDto
+
 @{
     ViewData["Title"] = "Create Category";
+    Layout = "~/Views/Shared/_Dashboard.cshtml";
 }
 <div class="container-fluid">
     <div class="container">
