--- a/Views/Category/Edit.cshtml
+++ b/Views/Category/Edit.cshtml
@@ -1,6 +1,7 @@
 @model Inventory.Models.CategoryDto
 @{
     ViewData["Title"] = "Update Category";
+    Layout = "~/Views/Shared/_Dashboard.cshtml";
 }
 
 <h2 class="text-center">@ViewData["Title"]</h2>
