--- a/Views/Category/Index.cshtml
+++ b/Views/Category/Index.cshtml
@@ -2,6 +2,7 @@
 @model List<Category>
 @{
     ViewData["Title"] = "Category list";
+    Layout = "~/Views/Shared/_Dashboard.cshtml";
 }
 
 <h2>@ViewData["Title"]</h2>
