--- a/Views/Shared/_Dashboard.cshtml
+++ b/Views/Shared/_Dashboard.cshtml
@@ -6,23 +6,32 @@
     <title>@ViewData["Title"] - Inventory</title>
 
     <link rel="stylesheet" href="~/css/bootstrap-icons.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/toastify.min.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="~/Inventory.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/dashboard-style.css" asp-append-version="true" />
+
 </head>
 <body>
-    @RenderBody()
+    <div class="container-fluid">
+          <div class="row">
+            <div class="col-auto dashboard-sidebar bg-success p-1" >
+                @Html.Partial("~/Views/Dashboard/_DashboardSidebar.cshtml");
+            </div>
+            <div class="col dashboard-content" >
+                <main role="main" class="pb-3">
+                @RenderBody()
+            </main>
+            </div>
+        </div>
+     </div>
 
 
 
 
 
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+
+    <script src="~/js/bootstrap.min.js" asp-append-version="true"></script>
     <script src="~/js/toastify-js.js" asp-append-version="true"></script>
     <script src="~/js/axios.min.js" asp-append-version="true"></script>
     <script src="~/js/config.js" asp-append-version="true"></script>
