--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Inventory</title>
 
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/toastify.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/bootstrap-icons.css">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     @* <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"> *@
-    @* <link rel="stylesheet" href="~/Inventory.styles.css" asp-append-version="true" /> *@
 </head>
 
 <body>
@@ -89,9 +88,8 @@
         @Html.Partial("Footer")  
     </footer>
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+
+    <script src="~/js/bootstrap.js"></script>
     <script src="~/js/toastify-js.js" asp-append-version="true"></script>
     <script src="~/js/axios.min.js" asp-append-version="true"></script>
     <script src="~/js/config.js" asp-append-version="true"></script>
