--- a/Views/Category/Index.cshtml
+++ b/Views/Category/Index.cshtml
@@ -16,7 +16,7 @@
 <div class="row">
     <div class="col-12">
         @if(Model == null || !Model.Any()){
-                <h2>No Content found.</h2>
+                <h2 class="text-center">No Content found.</h2>
             }else{     
         <table class="table table-striped">
             <thead>
