--- a/Views/Dashboard/_DashboardSidebar.cshtml
+++ b/Views/Dashboard/_DashboardSidebar.cshtml
@@ -56,7 +56,7 @@
 
 
             <li class="nav-item">
-              <a href="/media" class="nav-link link-dark">
+              <a asp-area="" asp-controller="Media" asp-action="Index" class="nav-link link-dark">
                 <i class="fs-4 bi bi-card-image "></i>
                 <span class="d-none d-md-inline">Media</span>
               </a>
