--- a/Views/Media/_UploadPartial.cshtml
+++ b/Views/Media/_UploadPartial.cshtml
@@ -10,7 +10,7 @@
         <div class="col-12">
             <div class="card shadow-lg p-5 gap-4">
 
-                <input class="form-control" type="file" multiple accept="image/*" onChange="handleFileChange(event)"
+                <input class="form-control" type="file" multiple accept="image/*" onChange="handleFileChangegit ad(event)"
                     name="file" />
                 <button onClick="uploadFile()" class="btn btn-success" type="submit">Upload Media</button>
             </div>
