--- a/Views/Shared/_Dashboard.cshtml
+++ b/Views/Shared/_Dashboard.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - Inventory</title>
 
     <link rel="stylesheet" href="~/css/bootstrap-icons.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/bootstrap.css" />
+    <link rel="stylesheet" href="~/css/bootstrap.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/css/toastify.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/dashboard-style.css" asp-append-version="true" />
 
@@ -31,7 +31,8 @@
 
 
 
-    <script src="~/js/bootstrap.min.js" asp-append-version="true"></script>
+    @* <script src="~/js/bootstrap.js" asp-append-version="true"></script> *@
+    <script src="~/js/bootstrap.bundle.js" asp-append-version="true"></script>
     <script src="~/js/toastify-js.js" asp-append-version="true"></script>
     <script src="~/js/axios.min.js" asp-append-version="true"></script>
     <script src="~/js/config.js" asp-append-version="true"></script>
